Added back button and started registration validation

--- a/src/View/forgotPassword.fxml
+++ b/src/View/forgotPassword.fxml
@@ -6,9 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="605.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
    <children>
       <Label layoutX="201.0" layoutY="85.0" text="Forgot Password">
          <font>
@@ -24,5 +22,6 @@
       <Label layoutX="151.0" layoutY="261.0" prefHeight="21.0" prefWidth="193.0" text="Secret Question Answer" />
       <PasswordField fx:id="txtReset" layoutX="151.0" layoutY="298.0" prefHeight="31.0" prefWidth="332.0" />
       <Button fx:id="btnResetPassword" layoutX="241.0" layoutY="365.0" mnemonicParsing="false" text="Reset Password" textAlignment="CENTER" />
+      <Button layoutX="42.0" layoutY="37.0" mnemonicParsing="false" onAction="#previousPage" text="Back" />
    </children>
 </AnchorPane>
