--- a/src/View/registration.fxml
+++ b/src/View/registration.fxml
@@ -2,30 +2,30 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="632.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
    <children>
-      <Button layoutX="279.0" layoutY="559.0" mnemonicParsing="false" onAction="#userRegistration" text="Register" />
-      <TextField fx:id="txtFirstName" layoutX="59.0" layoutY="246.0" />
-      <TextField fx:id="txtSecondName" layoutX="388.0" layoutY="246.0" />
+      <Button fx:id="btnBack" alignment="CENTER" contentDisplay="CENTER" layoutX="67.0" layoutY="44.0" mnemonicParsing="false" onAction="#previousPage" text="Back" />
       <Label alignment="CENTER" layoutX="228.0" layoutY="108.0" prefHeight="21.0" prefWidth="177.0" text="Register">
          <font>
-            <Font name="Arial Black" size="22.0" />
+            <Font name="Arial Black" size="29.0" />
          </font>
       </Label>
-      <Label fx:id="lblFirstName" layoutX="59.0" layoutY="209.0" prefHeight="21.0" prefWidth="187.0" text="First Name" />
-      <Label fx:id="lblSecondName" layoutX="388.0" layoutY="209.0" prefHeight="21.0" prefWidth="187.0" text="Second Name" />
-      <TextField fx:id="txtRegoUsername" layoutX="59.0" layoutY="326.0" />
-      <TextField fx:id="txtRegoPassword" layoutX="388.0" layoutY="326.0" />
-      <Label fx:id="lblUsername" layoutX="59.0" layoutY="289.0" prefHeight="21.0" prefWidth="187.0" text="Username" />
-      <Label fx:id="lblPassword" layoutX="388.0" layoutY="289.0" prefHeight="21.0" prefWidth="187.0" text="Password" />
-      <Label fx:id="lblSecretQ" layoutX="59.0" layoutY="399.0" prefHeight="21.0" prefWidth="187.0" text="Secret Question" />
-      <Label fx:id="lblSecretA" layoutX="59.0" layoutY="462.0" prefHeight="21.0" prefWidth="150.0" text="Secret Answer" />
-      <TextField fx:id="txtSecretAnswer" layoutX="59.0" layoutY="492.0" />
+      <Label fx:id="lblFirstName" alignment="CENTER" layoutX="92.0" layoutY="206.0" prefHeight="21.0" prefWidth="187.0" text="First Name" />
+      <TextField fx:id="txtFirstName" layoutX="92.0" layoutY="237.0" />
+      <TextField fx:id="txtSecondName" layoutX="353.0" layoutY="243.0" />
+      <Label fx:id="lblSecondName" alignment="CENTER" layoutX="353.0" layoutY="206.0" prefHeight="21.0" prefWidth="187.0" text="Second Name" />
+      <TextField fx:id="txtRegoUsername" layoutX="92.0" layoutY="317.0" />
+      <Label fx:id="lblUsername" alignment="CENTER" layoutX="92.0" layoutY="286.0" prefHeight="21.0" prefWidth="187.0" text="Username" />
+      <Label fx:id="lblPassword" alignment="CENTER" layoutX="353.0" layoutY="286.0" prefHeight="21.0" prefWidth="187.0" text="Password" />
+      <Label fx:id="lblSecretQ" alignment="CENTER" layoutX="218.0" layoutY="394.0" prefHeight="21.0" prefWidth="187.0" text="Secret Question" textAlignment="CENTER" />
+      <Label fx:id="lblSecretA" alignment="CENTER" layoutX="121.0" layoutY="478.0" prefHeight="21.0" prefWidth="382.0" text="Secret Answer" textAlignment="CENTER" />
+      <Button layoutX="279.0" layoutY="575.0" mnemonicParsing="false" onAction="#userRegistration" text="Register" />
+      <PasswordField fx:id="txtRegoPassword" layoutX="353.0" layoutY="317.0" />
+      <PasswordField fx:id="txtSecretAnswer" layoutX="120.0" layoutY="514.0" prefHeight="31.0" prefWidth="382.0" />
    </children>
 </AnchorPane>
