--- a/src/View/employeeDashboard.fxml
+++ b/src/View/employeeDashboard.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="603.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeDashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeDashboardController">
    <children>
       <Label fx:id="lblWelcomeUser" layoutX="283.0" layoutY="121.0" text="Hello:" />
       <Label fx:id="lblDashboard" layoutX="237.0" layoutY="171.0" text="Dashboard">
@@ -18,5 +16,6 @@
       <Button fx:id="btnMakeBooking" layoutX="141.0" layoutY="235.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="325.0" text="Make A Booking" />
       <Button fx:id="btnDeleteBooking" layoutX="141.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="325.0" text="Delete Booking" />
       <Button fx:id="btnManageAccount" layoutX="141.0" layoutY="355.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="325.0" text="Manage Account" />
+      <Button fx:id="btnBack" layoutX="49.0" layoutY="45.0" mnemonicParsing="false" onAction="#previousPage" text="Back" />
    </children>
 </AnchorPane>
