--- a/src/View/Success.fxml
+++ b/src/View/Success.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Success">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
    <children>
-      <Label layoutX="218.0" layoutY="55.0" text="Success">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="158.0" layoutY="23.0" prefHeight="122.0" prefWidth="309.0" text="Successessful Registration" wrapText="true">
          <font>
             <Font name="Lucida Console" size="39.0" />
          </font>
       </Label>
+      <Button fx:id="btnProceed" layoutX="259.0" layoutY="323.0" mnemonicParsing="false" onAction="#previousPage" prefHeight="31.0" prefWidth="82.0" text="Proceed" />
    </children>
 </AnchorPane>
