--- a/src/View/loginPage.fxml
+++ b/src/View/loginPage.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="639.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="639.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
    <children>
       <Label alignment="CENTER" layoutX="219.0" layoutY="56.0" prefHeight="17.0" prefWidth="224.0" text="Booking System" textAlignment="CENTER">
          <font>
@@ -22,7 +21,7 @@
       </Label>
       <Label layoutX="194.0" layoutY="171.0" prefHeight="17.0" prefWidth="67.0" text="Username" />
       <TextField fx:id="txtUsername" layoutX="277.0" layoutY="167.0" />
-      <Label layoutX="194.0" layoutY="219.0" prefHeight="17.0" prefWidth="58.0" text="Password" />
+      <Label layoutX="181.0" layoutY="219.0" prefHeight="21.0" prefWidth="71.0" text="Password" />
       <PasswordField fx:id="txtPassword" layoutX="277.0" layoutY="215.0" />
       <Button fx:id="btnLogIn" layoutX="304.0" layoutY="291.0" mnemonicParsing="false" onAction="#Login" text="Log in " />
       <Label layoutX="240.0" layoutY="257.0" text="Don't have an account? ">
@@ -31,12 +30,12 @@
          </font>
       </Label>
       <Button fx:id="btnSignUp" layoutX="374.0" layoutY="253.0" mnemonicParsing="false" onAction="#registration" text="Sign up" />
-      <Label layoutX="236.0" layoutY="332.0" text="Forgot Password?">
+      <Label layoutX="236.0" layoutY="339.0" text="Forgot Password?">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="btnResetPassword" layoutX="331.0" layoutY="328.0" mnemonicParsing="false" onAction="#forgotPassword" text="Reset password" />
-      <Label fx:id="isConnected" layoutX="489.0" layoutY="413.0" prefHeight="17.0" prefWidth="136.0" text="Database Status!" />
+      <Button fx:id="btnResetPassword" layoutX="331.0" layoutY="335.0" mnemonicParsing="false" onAction="#forgotPassword" text="Reset password" />
+      <Label fx:id="isConnected" layoutX="446.0" layoutY="413.0" prefHeight="21.0" prefWidth="179.0" text="Database Status!" />
    </children>
 </AnchorPane>
