--- a/src/View/registration.fxml
+++ b/src/View/registration.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -9,24 +10,25 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
    <children>
-      <Button fx:id="btnBack" alignment="CENTER" contentDisplay="CENTER" layoutX="67.0" layoutY="44.0" mnemonicParsing="false" onAction="#previousPage" text="Back" />
-      <Label alignment="CENTER" layoutX="228.0" layoutY="108.0" prefHeight="21.0" prefWidth="177.0" text="Register">
+      <Button fx:id="btnBack" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="45.0" mnemonicParsing="false" onAction="#previousPage" prefHeight="25.0" prefWidth="58.0" text="Back" />
+      <Label alignment="CENTER" layoutX="228.0" layoutY="111.0" prefHeight="21.0" prefWidth="177.0" text="Register">
          <font>
             <Font name="Arial Black" size="29.0" />
          </font>
       </Label>
-      <Label fx:id="lblFirstName" alignment="CENTER" layoutX="92.0" layoutY="206.0" prefHeight="21.0" prefWidth="187.0" text="First Name" />
-      <TextField fx:id="txtFirstName" layoutX="92.0" layoutY="237.0" />
-      <TextField fx:id="txtSecondName" layoutX="353.0" layoutY="243.0" />
-      <Label fx:id="lblSecondName" alignment="CENTER" layoutX="353.0" layoutY="206.0" prefHeight="21.0" prefWidth="187.0" text="Second Name" />
-      <TextField fx:id="txtRegoUsername" layoutX="92.0" layoutY="317.0" />
-      <Label fx:id="lblUsername" alignment="CENTER" layoutX="92.0" layoutY="286.0" prefHeight="21.0" prefWidth="187.0" text="Username" />
-      <Label fx:id="lblPassword" alignment="CENTER" layoutX="353.0" layoutY="286.0" prefHeight="21.0" prefWidth="187.0" text="Password" />
+      <Label fx:id="lblFirstName" alignment="CENTER" layoutX="122.0" layoutY="232.0" prefHeight="21.0" prefWidth="149.0" text="First Name" />
+      <TextField fx:id="txtFirstName" layoutX="121.0" layoutY="254.0" />
+      <TextField fx:id="txtSecondName" layoutX="353.0" layoutY="252.0" />
+      <Label fx:id="lblSecondName" alignment="CENTER" layoutX="353.0" layoutY="231.0" prefHeight="21.0" prefWidth="149.0" text="Second Name" />
+      <TextField fx:id="txtRegoUsername" layoutX="121.0" layoutY="327.0" />
+      <Label fx:id="lblUsername" alignment="CENTER" layoutX="121.0" layoutY="307.0" prefHeight="21.0" prefWidth="149.0" text="Username" />
+      <Label fx:id="lblPassword" alignment="CENTER" layoutX="353.0" layoutY="304.0" prefHeight="21.0" prefWidth="149.0" text="Password" />
       <Label fx:id="lblSecretQ" alignment="CENTER" layoutX="218.0" layoutY="394.0" prefHeight="21.0" prefWidth="187.0" text="Secret Question" textAlignment="CENTER" />
       <Label fx:id="lblSecretA" alignment="CENTER" layoutX="121.0" layoutY="478.0" prefHeight="21.0" prefWidth="382.0" text="Secret Answer" textAlignment="CENTER" />
-      <Button layoutX="279.0" layoutY="575.0" mnemonicParsing="false" onAction="#userRegistration" text="Register" />
-      <PasswordField fx:id="txtRegoPassword" layoutX="353.0" layoutY="317.0" />
+      <Button layoutX="269.0" layoutY="575.0" mnemonicParsing="false" onAction="#userRegistration" prefHeight="31.0" prefWidth="85.0" text="Register" />
+      <PasswordField fx:id="txtRegoPassword" layoutX="353.0" layoutY="325.0" />
       <PasswordField fx:id="txtSecretAnswer" layoutX="120.0" layoutY="514.0" prefHeight="31.0" prefWidth="382.0" />
-      <Label fx:id="lblStatus" layoutX="148.0" layoutY="617.0" prefHeight="21.0" prefWidth="419.0" />
+      <Label fx:id="lblStatus" layoutX="102.0" layoutY="617.0" prefHeight="21.0" prefWidth="419.0" />
+      <ComboBox fx:id="cboSecretQuestion" layoutX="121.0" layoutY="433.0" prefHeight="25.0" prefWidth="382.0" promptText="Select Secret Question!" />
    </children>
 </AnchorPane>
