--- a/src/View/Success.fxml
+++ b/src/View/Success.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="158.0" layoutY="23.0" prefHeight="122.0" prefWidth="309.0" text="Successessful Registration" wrapText="true">
          <font>
             <Font name="Lucida Console" size="39.0" />
          </font>
       </Label>
-      <Button fx:id="btnProceed" layoutX="259.0" layoutY="323.0" mnemonicParsing="false" onAction="#previousPage" prefHeight="31.0" prefWidth="82.0" text="Proceed" />
+      <Button fx:id="btnProceed" layoutX="259.0" layoutY="323.0" mnemonicParsing="false"  prefHeight="31.0" prefWidth="82.0" text="Proceed" />
    </children>
 </AnchorPane>
