--- a/src/View/loginPage.fxml
+++ b/src/View/loginPage.fxml
@@ -1,41 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="639.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
-   <children>
-      <Label alignment="CENTER" layoutX="219.0" layoutY="56.0" prefHeight="17.0" prefWidth="224.0" text="Booking System" textAlignment="CENTER">
-         <font>
-            <Font name="Arial Black" size="22.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="252.0" layoutY="102.0" prefHeight="17.0" prefWidth="156.0" text="Log In" textAlignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="194.0" layoutY="171.0" prefHeight="17.0" prefWidth="67.0" text="Username" />
-      <TextField fx:id="txtUsername" layoutX="277.0" layoutY="167.0" />
-      <Label layoutX="181.0" layoutY="219.0" prefHeight="21.0" prefWidth="71.0" text="Password" />
-      <PasswordField fx:id="txtPassword" layoutX="277.0" layoutY="215.0" />
-      <Button fx:id="btnLogIn" layoutX="304.0" layoutY="291.0" mnemonicParsing="false" onAction="#Login" text="Log in " />
-      <Label layoutX="240.0" layoutY="257.0" text="Don't have an account? ">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnSignUp" layoutX="374.0" layoutY="253.0" mnemonicParsing="false" onAction="#registration" text="Sign up" />
-      <Label layoutX="236.0" layoutY="339.0" text="Forgot Password?">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnResetPassword" layoutX="331.0" layoutY="335.0" mnemonicParsing="false" onAction="#forgotPassword" text="Reset password" />
-      <Label fx:id="isConnected" layoutX="446.0" layoutY="413.0" prefHeight="21.0" prefWidth="179.0" text="Database Status!" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="526.0"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+   <top>
+      <VBox alignment="CENTER" prefHeight="129.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Arub Booking">
+               <font>
+                  <Font name="Calibri" size="29.0" />
+               </font>
+            </Label>
+            <Label text="Log in">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account? Create one!" />
+            <Hyperlink fx:id="hypSignUp" onAction="#registration" text="Sign Up" />
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <VBox alignment="CENTER" prefHeight="170.0" prefWidth="149.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="txtUsername" promptText="Enter Username!" />
+            <PasswordField fx:id="txtPassword" promptText="Enter Password!" />
+            <Label fx:id="isConnected" text="Database status" />
+            <Button mnemonicParsing="false" onAction="#Login" text="Log In" />
+            <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="226.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot password?" wrappingWidth="98.84440612792969" />
+                  <Hyperlink onAction="#forgotPassword" prefHeight="10.0" prefWidth="91.0" text="Reset password" />
+               </children>
+            </HBox>
+         </children>
+         <BorderPane.margin>
+            <Insets left="150.0" right="150.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+</BorderPane>
