--- a/src/View/registration.fxml
+++ b/src/View/registration.fxml
@@ -1,34 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="632.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
-   <children>
-      <Button fx:id="btnBack" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="45.0" mnemonicParsing="false" onAction="#previousPage" prefHeight="25.0" prefWidth="58.0" text="Back" />
-      <Label alignment="CENTER" layoutX="228.0" layoutY="111.0" prefHeight="21.0" prefWidth="177.0" text="Register">
-         <font>
-            <Font name="Arial Black" size="29.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblFirstName" alignment="CENTER" layoutX="122.0" layoutY="232.0" prefHeight="21.0" prefWidth="149.0" text="First Name" />
-      <TextField fx:id="txtFirstName" layoutX="121.0" layoutY="254.0" />
-      <TextField fx:id="txtSecondName" layoutX="353.0" layoutY="252.0" />
-      <Label fx:id="lblSecondName" alignment="CENTER" layoutX="353.0" layoutY="231.0" prefHeight="21.0" prefWidth="149.0" text="Second Name" />
-      <TextField fx:id="txtRegoUsername" layoutX="121.0" layoutY="327.0" />
-      <Label fx:id="lblUsername" alignment="CENTER" layoutX="121.0" layoutY="307.0" prefHeight="21.0" prefWidth="149.0" text="Username" />
-      <Label fx:id="lblPassword" alignment="CENTER" layoutX="353.0" layoutY="304.0" prefHeight="21.0" prefWidth="149.0" text="Password" />
-      <Label fx:id="lblSecretQ" alignment="CENTER" layoutX="218.0" layoutY="394.0" prefHeight="21.0" prefWidth="187.0" text="Secret Question" textAlignment="CENTER" />
-      <Label fx:id="lblSecretA" alignment="CENTER" layoutX="121.0" layoutY="478.0" prefHeight="21.0" prefWidth="382.0" text="Secret Answer" textAlignment="CENTER" />
-      <Button layoutX="269.0" layoutY="575.0" mnemonicParsing="false" onAction="#userRegistration" prefHeight="31.0" prefWidth="85.0" text="Register" />
-      <PasswordField fx:id="txtRegoPassword" layoutX="353.0" layoutY="325.0" />
-      <PasswordField fx:id="txtSecretAnswer" layoutX="120.0" layoutY="514.0" prefHeight="31.0" prefWidth="382.0" />
-      <Label fx:id="lblStatus" layoutX="102.0" layoutY="617.0" prefHeight="21.0" prefWidth="419.0" />
-      <ComboBox fx:id="cboSecretQuestion" layoutX="121.0" layoutY="433.0" prefHeight="25.0" prefWidth="382.0" promptText="Select Secret Question!" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
+   <top>
+      <GridPane alignment="CENTER" prefHeight="65.0" prefWidth="607.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="297.0" minWidth="10.0" prefWidth="149.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="504.0" minWidth="10.0" prefWidth="343.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="504.0" minWidth="10.0" prefWidth="136.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label prefHeight="35.0" prefWidth="108.0" text="Register" textAlignment="CENTER" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Calibri" size="30.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="btnBack" mnemonicParsing="false" onAction="#previousPage" text="Back" />
+         </children>
+         <BorderPane.margin>
+            <Insets top="25.0" />
+         </BorderPane.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </GridPane>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btnRegister" mnemonicParsing="false" onAction="#userRegistration" prefHeight="39.0" prefWidth="84.0" text="Register" />
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets left="30.0" right="30.0" />
+         </BorderPane.margin>
+         <children>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="307.0" text="Personal Details" />
+            <GridPane hgap="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="txtFirstName" promptText="Enter First Name!" />
+                  <TextField fx:id="txtSecondName" promptText="Enter Last Name!" GridPane.columnIndex="1" />
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
+            <Label fx:id="lblStatus" alignment="CENTER" prefHeight="17.0" prefWidth="262.0" text="Username" />
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="txtRegoUsername" alignment="CENTER" promptText="Enter Username!">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </TextField>
+               </children>
+            </GridPane>
+            <Label fx:id="lblPasswordStatus" alignment="CENTER" prefHeight="17.0" prefWidth="226.0" text="Password Status" textAlignment="CENTER" />
+            <GridPane hgap="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <PasswordField fx:id="txtRegoPassword" promptText="Enter Password" />
+                  <PasswordField fx:id="txtRegoConfirmPassword" promptText="Confirm Password" GridPane.columnIndex="1" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="411.0" text="Secret Question" />
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ComboBox fx:id="cboSecretQuestion" prefHeight="25.0" prefWidth="532.0" promptText="Select Secret Question!" />
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
+            <Label fx:id="lblSecretPassStatus" alignment="CENTER" prefHeight="17.0" prefWidth="461.0" text="Secret Question Answer" />
+            <GridPane hgap="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <PasswordField fx:id="txtSecretAnswer" promptText="Secret Question Answer" />
+                  <PasswordField fx:id="txtConfirmSecretAnswer" promptText="Confirm Secret Answer!" GridPane.columnIndex="1" />
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
+            <Label text="Label" />
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
