--- a/src/View/forgotPassword.fxml
+++ b/src/View/forgotPassword.fxml
@@ -12,8 +12,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="581.0"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -25,7 +25,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" text="Back" />
+            <Button mnemonicParsing="false" onAction="#previousPage" text="Back" />
             <Label alignment="CENTER" prefHeight="45.0" prefWidth="528.0" text="Forgot Password" GridPane.columnIndex="1">
                <font>
                   <Font size="30.0" />
@@ -33,6 +33,9 @@
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
+               <padding>
+                  <Insets right="19.0" />
+               </padding>
             </Label>
          </children>
          <BorderPane.margin>
@@ -46,7 +49,7 @@
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
          <padding>
-            <Insets left="30.0" right="30.0" />
+            <Insets left="30.0" right="30.0" top="20.0" />
          </padding>
          <BorderPane.margin>
             <Insets />
@@ -61,7 +64,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField prefHeight="31.0" prefWidth="369.0" promptText="Enter Username" />
+                  <TextField fx:id="txtUsername" prefHeight="31.0" prefWidth="369.0" promptText="Enter Username" />
                </children>
                <opaqueInsets>
                   <Insets left="80.0" />
@@ -70,6 +73,7 @@
                   <Insets left="80.0" right="80.0" />
                </padding>
             </GridPane>
+            <Label fx:id="lblUsernameStatus" text="username status" />
          </children>
       </VBox>
    </center>
@@ -79,7 +83,7 @@
             <Insets top="25.0" />
          </BorderPane.margin>
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Proceed" textAlignment="CENTER" />
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#userNameValidation" prefHeight="37.0" prefWidth="86.0" text="Proceed" textAlignment="CENTER" />
          </children>
       </HBox>
    </bottom>
