Singleton up and running

--- a/src/View/adminDashboard.fxml
+++ b/src/View/adminDashboard.fxml
@@ -49,7 +49,7 @@
    <center>
       <VBox alignment="CENTER" prefHeight="328.0" prefWidth="600.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Hello: What would you like to do today?" />
+            <Label fx:id="lblWelcome" text="Hello: What would you like to do today?" />
             <Button fx:id="btnLockdown" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#lockdownConditions" prefHeight="50.0" prefWidth="158.0" text="Lockdown Condition" textAlignment="CENTER" />
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="158.0" text="Manage Booking" textAlignment="CENTER" />
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#manageAdminAccount" prefHeight="50.0" prefWidth="158.0" text="Manage Account" textAlignment="CENTER" />
