--- a/src/View/forgotPassword.fxml
+++ b/src/View/forgotPassword.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="581.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -52,7 +51,7 @@
             <Insets left="30.0" right="30.0" top="20.0" />
          </padding>
          <BorderPane.margin>
-            <Insets />
+            <Insets top="12.0" />
          </BorderPane.margin>
          <children>
             <Label fx:id="btnUsername" alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="358.0" text="Username" textAlignment="CENTER" />
