--- a/src/View/forgotPasswordP3.fxml
+++ b/src/View/forgotPasswordP3.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ForgotPasswordP3Controller">
    <top>
       <GridPane BorderPane.alignment="CENTER">
@@ -27,7 +26,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="45.0" prefWidth="360.0" GridPane.columnIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="215.0" text="Reset Password" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="45.0" prefWidth="293.0" text="Forgot Password" textAlignment="CENTER">
                      <font>
                         <Font size="30.0" />
                      </font>
@@ -94,7 +93,10 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="75.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#changePassword" text="Update Password" />
+            <Button mnemonicParsing="false" onAction="#changePassword" text="Update Password">
+               <HBox.margin>
+                  <Insets bottom="10.0" />
+               </HBox.margin></Button>
          </children>
       </HBox>
    </bottom>
