--- a/src/View/loginPage.fxml
+++ b/src/View/loginPage.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="526.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
    <top>
       <VBox alignment="CENTER" prefHeight="129.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -34,7 +33,10 @@
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account? Create one!" />
-            <Hyperlink fx:id="hypSignUp" onAction="#registration" text="Sign Up" />
+            <Hyperlink fx:id="hypSignUp" onAction="#registration" text="Sign Up!">
+               <font>
+                  <Font name="System Italic" size="15.0" />
+               </font></Hyperlink>
          </children>
       </HBox>
    </bottom>
@@ -44,12 +46,18 @@
             <TextField fx:id="txtUsername" promptText="Enter Username!" />
             <PasswordField fx:id="txtPassword" promptText="Enter Password!" />
             <Label fx:id="isConnected" text="Database status" />
-            <Button mnemonicParsing="false" onAction="#Login" text="Log In" />
             <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="226.0">
                <children>
-                  <Hyperlink onAction="#forgotPassword" prefHeight="29.0" prefWidth="119.0" text="Reset password!" />
+                  <Hyperlink onAction="#forgotPassword" prefHeight="29.0" prefWidth="119.0" text="Reset password!">
+                     <font>
+                        <Font name="System Italic" size="15.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin></Hyperlink>
                </children>
             </HBox>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#Login" prefHeight="38.0" prefWidth="67.0" text="Log In" />
          </children>
          <BorderPane.margin>
             <Insets left="150.0" right="150.0" />
