--- a/src/View/employeeManageAccount.fxml
+++ b/src/View/employeeManageAccount.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManageAccount">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManageAccountController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -69,8 +68,8 @@
                      </font>
                   </Label>
                   <Button mnemonicParsing="false" onAction="#personalDetails" prefHeight="40.0" prefWidth="270.0" text="Update Personal Details" />
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="270.0" text="Update Password" />
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="270.0" text="Update Secret Question and Answer" />
+                  <Button mnemonicParsing="false" onAction="#passwordChange" prefHeight="40.0" prefWidth="270.0" text="Update Password" />
+                  <Button mnemonicParsing="false" onAction="#secretDetails" prefHeight="40.0" prefWidth="270.0" text="Update Secret Question and Answer" />
                </children>
             </VBox>
          </children>
