--- a/src/View/employeeManagePassword.fxml
+++ b/src/View/employeeManagePassword.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,26 +12,27 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManagePersonalDetailsController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManagePassword">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="79.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="437.0" minWidth="10.0" prefWidth="402.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="99.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="68.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="424.0" minWidth="10.0" prefWidth="424.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="88.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#previousPage" text="Back" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="415.0" GridPane.columnIndex="1">
                <children>
-                  <Label text="Update Personal Details">
+                  <Label text="Update Password">
                      <font>
                         <Font size="30.0" />
                      </font>
@@ -56,10 +57,14 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0">
                <children>
-                  <Label text="Enter your new First and Last Name" />
-                  <GridPane alignment="CENTER" hgap="15.0">
+                  <Label alignment="CENTER" prefHeight="21.0" prefWidth="362.0" text="Select your new Password!">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <GridPane hgap="20.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -68,27 +73,27 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="txtFirstName" promptText="First Name" />
-                        <TextField fx:id="txtSecondName" promptText="Last Name" GridPane.columnIndex="1" />
+                        <PasswordField fx:id="txtNewPass" alignment="CENTER" promptText="New Password" />
+                        <PasswordField fx:id="txtConfirmNewPass" alignment="CENTER" promptText="Confirm New Password" GridPane.columnIndex="1" />
                      </children>
-                     <VBox.margin>
+                     <padding>
                         <Insets left="50.0" right="50.0" />
-                     </VBox.margin>
+                     </padding>
                   </GridPane>
                   <Label fx:id="lblStatus" text="Status" />
                </children>
+               <GridPane.margin>
+                  <Insets top="10.0" />
+               </GridPane.margin>
             </VBox>
          </children>
       </GridPane>
    </center>
    <bottom>
-      <HBox alignment="CENTER" prefHeight="64.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="65.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#updatePersonalDetails" text="UPDATE" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#updatePassword" text="UPDATE" />
          </children>
-         <padding>
-            <Insets bottom="15.0" />
-         </padding>
       </HBox>
    </bottom>
 </BorderPane>
