--- a/src/View/employeeManageSecretQA.fxml
+++ b/src/View/employeeManageSecretQA.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -12,13 +13,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManagePersonalDetailsController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeManageSecretQAController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="79.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="437.0" minWidth="10.0" prefWidth="402.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="99.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="78.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="418.0" minWidth="10.0" prefWidth="410.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="89.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -31,7 +33,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label text="Update Personal Details">
+                  <Label text="Update Secret Details">
                      <font>
                         <Font size="30.0" />
                      </font>
@@ -58,8 +60,15 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
                <children>
-                  <Label text="Enter your new First and Last Name" />
-                  <GridPane alignment="CENTER" hgap="15.0">
+                  <Label fx:id="lblPreviousQuest" alignment="CENTER" prefHeight="21.0" prefWidth="569.0" text="Your previous question:">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblSecQuest" text="Pick your new Secret Question" />
+                  <ComboBox fx:id="cboxSecQuest" prefHeight="31.0" prefWidth="330.0" promptText="Select your Secret Question" />
+                  <Label fx:id="lblSecAnswerStatus" alignment="CENTER" prefHeight="21.0" prefWidth="436.0" text="New Secret Password" textAlignment="CENTER" />
+                  <GridPane hgap="20.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -68,27 +77,26 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="txtFirstName" promptText="First Name" />
-                        <TextField fx:id="txtSecondName" promptText="Last Name" GridPane.columnIndex="1" />
+                        <TextField fx:id="txtSecAnswer" alignment="CENTER" promptText="Secret Answer" />
+                        <TextField fx:id="txtConfirmSecAnswer" alignment="CENTER" promptText="Confirm Secret Answer" GridPane.columnIndex="1" />
                      </children>
-                     <VBox.margin>
-                        <Insets left="50.0" right="50.0" />
-                     </VBox.margin>
+                     <padding>
+                        <Insets left="30.0" right="30.0" />
+                     </padding>
                   </GridPane>
-                  <Label fx:id="lblStatus" text="Status" />
                </children>
             </VBox>
          </children>
+         <BorderPane.margin>
+            <Insets left="30.0" right="30.0" />
+         </BorderPane.margin>
       </GridPane>
    </center>
    <bottom>
-      <HBox alignment="CENTER" prefHeight="64.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="68.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#updatePersonalDetails" text="UPDATE" />
+            <Button mnemonicParsing="false" onAction="#updateSecretQA" text="UPDATE" />
          </children>
-         <padding>
-            <Insets bottom="15.0" />
-         </padding>
       </HBox>
    </bottom>
 </BorderPane>
