--- a/src/View/adminCreateNewEmployee.fxml
+++ b/src/View/adminCreateNewEmployee.fxml
@@ -47,7 +47,7 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnRegister" mnemonicParsing="false" onAction="#employeeCreation" prefHeight="39.0" prefWidth="84.0" text="Register" />
+            <Button fx:id="btnRegister" mnemonicParsing="false" onAction="#employeeCreation" prefHeight="39.0" prefWidth="148.0" text="Create Employee" />
          </children>
       </HBox>
    </bottom>
