--- a/src/View/employeeMakeBooking.fxml
+++ b/src/View/employeeMakeBooking.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="783.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
    <top>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane prefHeight="45.0" prefWidth="811.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="265.0" minWidth="10.0" prefWidth="77.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="537.0" minWidth="10.0" prefWidth="537.0" />
@@ -29,20 +29,21 @@
             <Insets top="25.0" />
          </BorderPane.margin>
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.valignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#previousPage" text="Back" />
+                  <Button mnemonicParsing="false" onAction="#previousPage" prefHeight="38.0" prefWidth="60.0" text="Back" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
                   <Label alignment="CENTER" text="Making Booking">
                      <font>
-                        <Font size="30.0" />
+                        <Font size="35.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
+            <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="60.0" text="Help" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
          </children>
          <padding>
             <Insets left="25.0" />
@@ -71,7 +72,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <DatePicker fx:id="dtpBooking" onAction="#setTables" prefHeight="31.0" prefWidth="261.0" GridPane.columnIndex="2" />
+                        <DatePicker fx:id="dtpBooking" onAction="#setUp" prefHeight="31.0" prefWidth="261.0" GridPane.columnIndex="2" />
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
                               <Label alignment="CENTER" text="Pick a date to make a booking " />
@@ -79,17 +80,20 @@
                         </HBox>
                      </children>
                   </GridPane>
-                  <GridPane>
+                  <GridPane hgap="20.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="263.0" minWidth="0.0" prefWidth="0.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="274.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label fx:id="lblCurrentBooking" text="Booking Status" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label fx:id="lblCurrentBooking" text="Booking Status" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                           <padding>
+                              <Insets right="15.0" />
+                           </padding></Label>
                         <Button fx:id="btnManageBooking" mnemonicParsing="false" onAction="#manageBooking" prefHeight="31.0" prefWidth="147.0" text="Manage Booking" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
@@ -167,4 +171,22 @@
    <padding>
       <Insets left="30.0" right="30.0" />
    </padding>
+   <bottom>
+      <GridPane prefHeight="38.0" prefWidth="811.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="449.0" minWidth="10.0" prefWidth="440.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <BorderPane.margin>
+            <Insets bottom="20.0" />
+         </BorderPane.margin>
+         <children>
+            <Button fx:id="btnCheckIn" mnemonicParsing="false" prefHeight="38.0" prefWidth="87.0" text="Check In" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+         </children>
+      </GridPane>
+   </bottom>
 </BorderPane>
