--- a/src/View/adminGraphicalVisual.fxml
+++ b/src/View/adminGraphicalVisual.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="783.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EmployeeMakeBookingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="783.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AdminGraphicalVisualController">
    <top>
       <GridPane prefHeight="45.0" prefWidth="811.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -31,19 +31,19 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.valignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#previousPage" prefHeight="38.0" prefWidth="60.0" text="Back" />
+                  <Button fx:id="btnClose" mnemonicParsing="false" onAction="#close" prefHeight="38.0" prefWidth="60.0" text="Close" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label alignment="CENTER" text="Making Booking">
+                  <Label alignment="CENTER" text="Graphic Representation">
                      <font>
                         <Font size="35.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <Button fx:id="btnHelp" mnemonicParsing="false" onAction="#help" prefHeight="38.0" prefWidth="60.0" text="Help" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+            <Button fx:id="btnHelp" mnemonicParsing="false" prefHeight="38.0" prefWidth="60.0" text="Help" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
          </children>
          <padding>
             <Insets left="25.0" />
@@ -75,26 +75,9 @@
                         <DatePicker fx:id="dtpBooking" onAction="#setUp" prefHeight="31.0" prefWidth="261.0" GridPane.columnIndex="2" />
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                              <Label alignment="CENTER" text="Pick a date to make a booking " />
+                              <Label alignment="CENTER" text="Pick A Date To View Bookings" />
                            </children>
                         </HBox>
-                     </children>
-                  </GridPane>
-                  <GridPane hgap="20.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="263.0" minWidth="0.0" prefWidth="0.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="274.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label fx:id="lblCurrentBooking" text="Booking Status" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-                           <padding>
-                              <Insets right="15.0" />
-                           </padding></Label>
-                        <Button fx:id="btnManageBooking" mnemonicParsing="false" onAction="#manageBooking" prefHeight="31.0" prefWidth="147.0" text="Manage Booking" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                   <GridPane alignment="CENTER" hgap="15.0" prefHeight="436.0" prefWidth="801.0">
@@ -115,7 +98,7 @@
                         <Insets left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
                      <children>
-                        <Rectangle fx:id="Table1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -123,31 +106,31 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Rectangle>
-                        <Rectangle fx:id="Table2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table8" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table8" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table9" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table9" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
-                        <Rectangle fx:id="Table4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Rectangle>
@@ -159,12 +142,12 @@
                         <Label mouseTransparent="true" pickOnBounds="false" text="Table 7" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                         <Label mouseTransparent="true" pickOnBounds="false" text="Table 8" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                         <Label mouseTransparent="true" pickOnBounds="false" text="Table 9" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                        <Rectangle fx:id="Table5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Rectangle>
-                        <Rectangle fx:id="Table10" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" onMouseClicked="#selectTable" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Rectangle fx:id="Table10" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="94.0" stroke="BLACK" strokeType="INSIDE" width="188.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -198,11 +181,6 @@
             <Insets bottom="20.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="btnCheckIn" mnemonicParsing="false" onAction="#checkIn" prefHeight="54.0" prefWidth="108.0" text="Check In" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Button>
             <Label fx:id="lblLockdown" text="Lockdown Condition" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="25.0" />
