--- a/src/View/secretQuestionPage.fxml
+++ b/src/View/secretQuestionPage.fxml
@@ -58,7 +58,7 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                <children>
-                  <Label fx:id="lblWelcomeUser" text="&lt;Name&gt; Plese Proide your answer to this question">
+                  <Label fx:id="lblWelcomeUser" text="&lt;Name&gt;">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -73,11 +73,16 @@
                         <Insets left="75.0" right="75.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label fx:id="lblStatus" text="Answer status" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#validation" text="Verify" />
                </children>
             </VBox>
          </children>
       </GridPane>
    </center>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="72.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#validation" text="Verify" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
