--- a/src/View/adminUpdateEmployeeDetails.fxml
+++ b/src/View/adminUpdateEmployeeDetails.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="612.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AdminUpdateEmployee">
    <top>
       <GridPane BorderPane.alignment="CENTER">
@@ -54,7 +53,7 @@
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                <children>
                   <Label text="Personal Details" />
-                  <GridPane>
+                  <GridPane hgap="15.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -66,11 +65,17 @@
                         <TextField fx:id="txtFirstName" promptText="First Name" />
                         <TextField fx:id="txtLastName" promptText="Last Name" GridPane.columnIndex="1" />
                      </children>
+                     <VBox.margin>
+                        <Insets left="44.0" right="45.0" />
+                     </VBox.margin>
                   </GridPane>
                   <Label text="Username" />
-                  <TextField fx:id="txtUsername" promptText="New Username" />
+                  <TextField fx:id="txtUsername" promptText="New Username">
+                     <VBox.margin>
+                        <Insets left="45.0" right="45.0" />
+                     </VBox.margin></TextField>
                   <Label text="Password" />
-                  <GridPane>
+                  <GridPane hgap="15.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -82,6 +87,9 @@
                         <TextField fx:id="txtPassword" />
                         <TextField fx:id="txtConfirmPassword" GridPane.columnIndex="1" />
                      </children>
+                     <VBox.margin>
+                        <Insets left="45.0" right="45.0" />
+                     </VBox.margin>
                   </GridPane>
                   <Label text="Secret Question" />
                   <GridPane>
@@ -94,9 +102,12 @@
                      <children>
                         <ComboBox fx:id="cboxSecretQuestion" prefHeight="31.0" prefWidth="659.0" promptText="Pick the new Secret Question" />
                      </children>
+                     <VBox.margin>
+                        <Insets left="45.0" right="45.0" />
+                     </VBox.margin>
                   </GridPane>
                   <Label text="Secret Answer" />
-                  <GridPane>
+                  <GridPane hgap="15.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -108,6 +119,9 @@
                         <TextField fx:id="txtSecAnswer" promptText="Secret Password" />
                         <TextField fx:id="txtConfirmSecPassword" promptText="Confirm Secret Password" GridPane.columnIndex="1" />
                      </children>
+                     <VBox.margin>
+                        <Insets left="45.0" right="45.0" />
+                     </VBox.margin>
                   </GridPane>
                </children>
             </VBox>
