--- a/src/View/forgotPasswordP2.fxml
+++ b/src/View/forgotPasswordP2.fxml
@@ -66,8 +66,10 @@
                         <Font name="System Bold Italic" size="15.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtAnswer" alignment="CENTER" promptText="Enter Secret Answer!" />
-                  <Label fx:id="lblStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="389.0" text="Label" />
+                  <TextField fx:id="txtAnswer" alignment="CENTER" promptText="Enter Secret Answer!">
+                     <VBox.margin>
+                        <Insets left="50.0" right="50.0" />
+                     </VBox.margin></TextField>
                </children>
             </VBox>
          </children>
