--- a/src/View/registration.fxml
+++ b/src/View/registration.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="607.0"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegistrationController">
    <top>
       <GridPane alignment="CENTER" prefHeight="65.0" prefWidth="607.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -146,7 +145,6 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </GridPane>
-            <Label text="Label" />
          </children>
       </VBox>
    </center>
